--- a/outfit/package.json
+++ b/outfit/package.json
@@ -24,7 +24,10 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
