--- a/outfit/package.json
+++ b/outfit/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "dotenv": "^16.0.0",
@@ -24,6 +25,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.10.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
