--- a/outfit/package.json
+++ b/outfit/package.json
@@ -17,28 +17,32 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "dotenv": "^16.0.0",
-    "expo": "^45.0.0",
+    "expo": "^45.0.1",
     "expo-camera": "~12.2.0",
     "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.1",
-    "firebase": "^9.7.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "firebase": "^9.8.0",
+    "firebase-admin": "^10.2.0",
+    "nativescript-plugin-firebase": "^3.9.3",
+    "npm-check-updates": "^12.5.11",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-native": "0.68.1",
-    "react-native-gesture-handler": "~2.2.0",
+    "react-native-gesture-handler": "~2.4.2",
     "react-native-paper": "^4.12.1",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-safe-area-context": "4.2.5",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.11.1",
+    "react-native-screens": "~3.13.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.1",
+    "react-tinder-card": "^1.4.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.17.10"
   },
   "private": true
 }
